wxc/include/ewxw/wxc_glue.h

/* ELJPlotCurve */
TClassDefExtend(ELJPlotCurve,wxPlotCurve)
TClass(ELJPlotCurve) ELJPlotCurve_Create( void* _obj, void* _str, void* _end, void* _y, int offsetY, double startY, double endY );
void       ELJPlotCurve_Delete( TSelf(ELJPlotCurve) _obj );
double     ELJPlotCurve_GetEndY( TSelf(ELJPlotCurve) _obj );
int        ELJPlotCurve_GetOffsetY( TSelf(ELJPlotCurve) _obj );
double     ELJPlotCurve_GetStartY( TSelf(ELJPlotCurve) _obj );
void       ELJPlotCurve_SetEndY( TSelf(ELJPlotCurve) _obj, double endY );
void       ELJPlotCurve_SetOffsetY( TSelf(ELJPlotCurve) _obj, int offsetY );
void       ELJPlotCurve_SetPenNormal( TSelf(ELJPlotCurve) _obj, TClass(wxPen) pen );
void       ELJPlotCurve_SetPenSelected( TSelf(ELJPlotCurve) _obj, TClass(wxPen) pen );
void       ELJPlotCurve_SetStartY( TSelf(ELJPlotCurve) _obj, double startY );
int        wxPlotEvent_GetPosition( TSelf(wxPlotEvent) _obj );
double     wxPlotEvent_GetZoom( TSelf(wxPlotEvent) _obj );
void       wxPlotEvent_SetPosition( TSelf(wxPlotEvent) _obj, int pos );
void       wxPlotEvent_SetZoom( TSelf(wxPlotEvent) _obj, double zoom );
/* wxPlotOnOffCurve */
TClassDefExtend(wxPlotOnOffCurve,wxObject)
void       wxPlotOnOffCurve_Add( TSelf(wxPlotOnOffCurve) _obj, int on, int off, TClass(wxClientData) clientData );
TClass(wxPlotOnOffCurve) wxPlotOnOffCurve_Create( int offsetY );
void       wxPlotOnOffCurve_Delete( TSelf(wxPlotOnOffCurve) _obj );
void       wxPlotOnOffCurve_DrawOffLine( TSelf(wxPlotOnOffCurve) _obj, TClass(wxDC) dc, int y, int start, int end );
void       wxPlotOnOffCurve_DrawOnLine( TSelf(wxPlotOnOffCurve) _obj, TClass(wxDC) dc, int y, int start, int end, TClass(wxClientData) clientData );
void*      wxPlotOnOffCurve_GetAt( TSelf(wxPlotOnOffCurve) _obj, int index );
TClass(wxClientData) wxPlotOnOffCurve_GetClientData( TSelf(wxPlotOnOffCurve) _obj, int index );
int        wxPlotOnOffCurve_GetCount( TSelf(wxPlotOnOffCurve) _obj );
int        wxPlotOnOffCurve_GetEndX( TSelf(wxPlotOnOffCurve) _obj );
int        wxPlotOnOffCurve_GetOff( TSelf(wxPlotOnOffCurve) _obj, int index );
int        wxPlotOnOffCurve_GetOffsetY( TSelf(wxPlotOnOffCurve) _obj );
int        wxPlotOnOffCurve_GetOn( TSelf(wxPlotOnOffCurve) _obj, int index );
int        wxPlotOnOffCurve_GetStartX( TSelf(wxPlotOnOffCurve) _obj );
void       wxPlotOnOffCurve_SetOffsetY( TSelf(wxPlotOnOffCurve) _obj, int offsetY );
/* wxPlotWindow */
TClassDefExtend(wxPlotWindow,wxScrolledWindow)
void       wxPlotWindow_Add( TSelf(wxPlotWindow) _obj, TClass(wxPlotCurve) curve );
void       wxPlotWindow_AddOnOff( TSelf(wxPlotWindow) _obj, TClass(wxPlotCurve) curve );
TClass(wxPlotWindow) wxPlotWindow_Create( TClass(wxWindow) parent, int id, TRect(x,y,w,h), int flags );
void       wxPlotWindow_Delete( TSelf(wxPlotWindow) _obj, TClass(wxPlotCurve) curve );
void       wxPlotWindow_DeleteOnOff( TSelf(wxPlotWindow) _obj, TClass(wxPlotOnOffCurve) curve );
void       wxPlotWindow_Enlarge( TSelf(wxPlotWindow) _obj, TClass(wxPlotCurve) curve, double factor );
TClass(wxPlotCurve) wxPlotWindow_GetAt( TSelf(wxPlotWindow) _obj, int n );
int        wxPlotWindow_GetCount( TSelf(wxPlotWindow) _obj );
TClass(wxPlotCurve) wxPlotWindow_GetCurrent( TSelf(wxPlotWindow) _obj );
int        wxPlotWindow_GetEnlargeAroundWindowCentre( TSelf(wxPlotWindow) _obj );
TClass(wxPlotOnOffCurve)      wxPlotWindow_GetOnOffCurveAt( TSelf(wxPlotWindow) _obj, int n );
int        wxPlotWindow_GetOnOffCurveCount( TSelf(wxPlotWindow) _obj );
int        wxPlotWindow_GetScrollOnThumbRelease( TSelf(wxPlotWindow) _obj );
double     wxPlotWindow_GetUnitsPerValue( TSelf(wxPlotWindow) _obj );
double     wxPlotWindow_GetZoom( TSelf(wxPlotWindow) _obj );
void       wxPlotWindow_Move( TSelf(wxPlotWindow) _obj, TClass(wxPlotCurve) curve, int pixels_up );
void       wxPlotWindow_RedrawEverything( TSelf(wxPlotWindow) _obj );
void       wxPlotWindow_RedrawXAxis( TSelf(wxPlotWindow) _obj );
void       wxPlotWindow_RedrawYAxis( TSelf(wxPlotWindow) _obj );
void       wxPlotWindow_ResetScrollbar( TSelf(wxPlotWindow) _obj );
void       wxPlotWindow_SetCurrent( TSelf(wxPlotWindow) _obj, TClass(wxPlotCurve) current );
void       wxPlotWindow_SetEnlargeAroundWindowCentre( TSelf(wxPlotWindow) _obj, int enlargeAroundWindowCentre );
void       wxPlotWindow_SetScrollOnThumbRelease( TSelf(wxPlotWindow) _obj, int scrollOnThumbRelease );
void       wxPlotWindow_SetUnitsPerValue( TSelf(wxPlotWindow) _obj, double upv );
void       wxPlotWindow_SetZoom( TSelf(wxPlotWindow) _obj, double zoom );